--- a/style.css
+++ b/style.css
@@ -120,6 +120,32 @@ h3 {
   font-size: 20px;
 }
 
+h4 {
+  font-size: 15px;
+  padding-left: 10px; /* 整個列表的左邊距 */
+  color:deepskyblue;
+}
+
+ul {
+	list-style-type: none; /* 移除圓點 */
+    padding-left: 20px; /* 整個列表的左邊距 */
+}
+
+li {
+    padding-left: 15px; /* 每個列表項的左邊距 */
+}
+
+figure {
+    text-align: center; /* 讓圖片和文字居中 */
+    display: block; 
+}
+
+figcaption {
+    margin-top: 5px; /* 控制圖片與文字的間距 */
+    font-size: 15px; /* 可調整字體大小 */
+    color: #999; /* 可改變文字顏色 */
+}
+
 
 /* 章節共用樣式 */
 .section {
